# tabsdata

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  MANIFEST.in  Makefile.toml  Makeroot.toml  Maketask.toml  Manifest.toml  README.md  auto.rs  build.rs  pyproject.toml  requirements-all.txt  requirements-connector-mongodb.txt  requirements-connector-salesforce.txt  requirements-dev-first-party.txt_  requirements-dev-third-party.txt_  requirements-dev.txt  requirements-first-party.txt_  requirements-local.txt  requirements-salesforce.txt  requirements-test.txt  requirements-third-party-all.txt_  requirements-third-party.txt_  requirements.txt  setup.cfg  setup.json  setup.py  tdabout.py  tdlock.py  to_delete.py
.cargo/: audit.toml  clippy.toml  (+7 more)
connectors/python/tabsdata_databricks/: .coveragerc  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
connectors/python/tabsdata_databricks/requirements/: requirements-third-party.txt
connectors/python/tabsdata_databricks/tabsdata_databricks/: __init__.py  _connector.py  connector.py
connectors/python/tabsdata_databricks/tests_tabsdata_databricks/: conftest.py
connectors/python/tabsdata_databricks/tests_tabsdata_databricks/test_tabsdata_databricks/: test_output_databricks.py
connectors/python/tabsdata_databricks/tests_tabsdata_databricks/testing_resources/: README.md
expansions/polars/: Cargo.toml  Cross.toml  Manifest.toml  README.md  auto.rs  boot.rs
expansions/polars/modules/ty-tableframe/: Cargo.toml  README.md  pyproject.toml  test.py
expansions/polars/modules/ty-tableframe/python/: pytest.ini
expansions/polars/modules/ty-tableframe/src/: lib.rs  polars.rs  pystubs.rs
extensions/rust/te-apiserver/: Cargo.toml
extensions/rust/te-apiserver/src/: config.rs  lib.rs
extensions/rust/te-execution/: Cargo.toml  build.rs
extensions/rust/te-execution/src/: lib.rs  planner.rs  transaction.rs
extensions/rust/te-services/: Cargo.toml
extensions/rust/te-services/src/: lib.rs
extensions/rust/te-tableframe/: Cargo.toml
extensions/rust/te-tableframe/examples/: te-tableframe.rs
extensions/rust/te-tableframe/resources/: manifest.yaml
extensions/rust/te-tableframe/src/: engine.rs  lib.rs
extensions/rust/te-tableframe/src/execution/: from_graph.rs  test_utils.rs
macros/: Cargo.toml  Cross.toml  Manifest.toml  auto.rs  boot.rs  build.rs
macros/facets/td-apiforge/: Cargo.toml
macros/facets/td-apiforge/src/: attributes.rs  finder.rs  lib.rs  router_ext.rs  status.rs
macros/facets/td-apiforge/tests/: test.rs  test_server.rs
macros/facets/td-attach/: Cargo.toml
macros/facets/td-attach/src/: lib.rs
macros/facets/td-concrete/: Cargo.toml
macros/facets/td-concrete/src/: concrete.rs  lib.rs
macros/facets/td-concrete/tests/: test.rs
macros/facets/td-error/: Cargo.toml
macros/facets/td-error/src/: td_error.rs
macros/facets/td-type/: Cargo.toml
macros/facets/td-type/src/: dao.rs  dlo.rs  dto.rs  dxo.rs  lib.rs  type_builder.rs  typed_types.rs  url.rs
macros/facets/td-type/tests/: test.rs  test_type_builder.rs  test_typed_types.rs
macros/facets/td-typing/: Cargo.toml
macros/facets/td-typing/src/: lib.rs  service_type.rs
macros/facets/td-typing/tests/: test.rs
macros/facets/td-utoipa/: Cargo.toml
macros/facets/td-utoipa/src/: attributes.rs  finder.rs  lib.rs
macros/facets/td-utoipa/tests/: test.rs  test_server.rs
macros/facets/tm-error/: Cargo.toml
macros/facets/tm-error/src/: lib.rs  td_error.rs
macros/facets/tm-services/: Cargo.toml
macros/facets/tm-services/src/: derive_field_accessor.rs  derive_service_factory.rs  lib.rs  service_factory.rs
macros/facets/tm-test/: Cargo.toml
macros/facets/tm-test/src/: lib.rs  scoped_test.rs
macros/facets/tm-tower/: Cargo.toml
macros/facets/tm-tower/src/: derive_service_factory.rs  layer.rs  lib.rs  provider.rs  service_factory.rs
macros/facets/tm-workspace/: Cargo.toml
macros/facets/tm-workspace/src/: lib.rs  repository.rs  root.rs
macros/helpers/td-shared/: Cargo.toml
macros/helpers/td-shared/src/: lib.rs  meta_parser.rs  project.rs
macros/helpers/td-shared/tests/: meta_parser_test.rs
plugins/rust/td-interceptor/: Cargo.toml
plugins/rust/td-interceptor/examples/: interceptor.rs
plugins/rust/td-interceptor/resources/: manifest.yaml
plugins/rust/td-interceptor/src/: lib.rs
plugins/rust/td-interceptor/src/execution/: from_graph.rs
plugins/rust/td-transaction-interceptor/: Cargo.toml
server/binaries/td-server/: Cargo.toml  boot.rs  build.rs  config.json
server/binaries/td-server/examples/: helloworld.rs
server/binaries/td-server/examples/dummy/: hal.rs  tars.rs
server/binaries/td-server/examples/hello/: helloworld.rs
server/binaries/td-server/src/: apiserver.rs  bootloader.rs  importer.rs  supervisor.rs  tdabout.rs  tdserver.rs  transporter.rs
server/libraries/ta-apiserver/: Cargo.toml
server/libraries/ta-apiserver/src/: lib.rs
server/libraries/ta-services/: Cargo.toml
server/libraries/ta-services/src/: extension.rs  factory.rs  lib.rs  service.rs
server/libraries/ta-system/: Cargo.toml
server/libraries/ta-system/src/: edition.rs  lib.rs
server/libraries/ta-tableframe/: Cargo.toml
server/libraries/ta-tableframe/resources/: manifest.yaml
server/libraries/ta-tableframe/src/: api.rs  lib.rs
server/libraries/td-apiserver/: Cargo.toml
server/libraries/td-apiserver/src/: apiserver.rs  config.rs  lib.rs  macros.rs  scheduler_server.rs
server/libraries/td-authz/: Cargo.toml
server/libraries/td-authz/src/: lib.rs  sql.rs
server/libraries/td-common/: Cargo.toml  boot.rs  build.rs
server/libraries/td-common/src/: about.rs  absolute_path.rs  attach.rs  cli.rs  config.rs  constants.rs  dataset.rs  datetime.rs  env.rs  error.rs  execution_status.rs  files.rs  id.rs  index_map.rs  lib.rs  logging.rs  manifest.rs  monitor.rs  name.rs  os.rs  provider.rs  server.rs  settings.rs  signal.rs  status.rs  str.rs  system_tables.rs  test_td_types.rs  time.rs  uri.rs
server/libraries/td-database/: Cargo.toml  build.rs
server/libraries/td-database/src/: lib.rs
(+2194 files in other folders)
