#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata is a publish-subscribe (pub/sub) server for tables."
name = "tabsdata"
edition = "2021"
version = "1.2.0"
license = "Apache 2.0"
build = "build.rs"

[workspace.package]
authors = [
    "Aleix Lascorz Guiu   (tabsleix)   <aleix@tabsdata.com>",
    "Alejandro Abdelnur   (tucu0)      <tucu@tabsdata.com>",
    "Arvind Prabhakar     (aptabs)     <arvind@tabsdata.com>",
    "David Sánchez Frías  (tabsdavid)  <david@tabsdata.com>",
    "Dimas Cabré i Chacón (aoinokimi)  <dragon@tabsdata.com>",
    "Joaquín Bo Díaz      (joaquin041) <joaquin@tabsdata.com>"
]
edition = "2021"
homepage = "https://www.tabsdata.com"
license = "Apache 2.0"
publish = false
readme = "README.md"
repository = "https://github.com/tabsdata/tabsdata"
rust-version = "1.88.0"
version = "1.2.0"

[workspace]
members = [
    "devutils/automation/tasks/cargo/td-build",
    "devutils/automation/tasks/makers/td-xtask",
    "server/libraries/ta-apiserver",
    "server/libraries/ta-execution",
    "server/libraries/ta-tableframe",
    "server/libraries/td-apiserver",
    "server/libraries/td-authz",
    "server/libraries/td-common",
    "server/libraries/td-database",
    "server/libraries/td-error",
    "server/libraries/td-execution",
    "server/libraries/td-objects",
    "server/libraries/td-process",
    "server/libraries/td-python",
    "server/libraries/td-schema",
    "server/libraries/td-security",
    "server/libraries/td-services",
    "server/libraries/td-shuttle",
    "server/libraries/td-storage",
    "server/libraries/td-supervisor",
    "server/libraries/td-tableframe",
    "server/libraries/td-test",
    "server/libraries/td-tower",
    "extensions/rust/te-apiserver",
    "extensions/rust/te-execution",
    "extensions/rust/te-tableframe",
    "server/binaries/td-server",
]
exclude = [
    "macros",
    "macros/helpers/td-shared",
    "macros/facets/td-apiforge",
    "macros/facets/td-attach",
    "macros/facets/td-type",
    "macros/facets/tm-error",
    "macros/facets/tm-test",
    "macros/facets/tm-tower",
    "macros/facets/tm-workspace",
]

[[bin]]
name = "auto"
path = "auto.rs"

[features]

# This feature enables the generation of API documentation for the server.
api-docs = []

# This feature enbles enterprise functionalities not available in the standard implementation.
# It should be normally used only for cross-crates tests.
enterprise = []

td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
test-utils = []

# Enable this feature to enable logging of crate sqlx, that can be very verbose and potentially exposing sensitive data.
sqlx_log = []

# Tests for the logging system can break other tests. Activate this feature to run the logging tests. They must run in
# an isolated process. Use command "cargo test --features test_logging -- test_logging" to run the logging tests.
# All logging tests' name must start with "test-logging", as shown in the Makefile command.
test_logging = []

# Tower metadata tests skip actual logic execution, and therefore need its own feature. Use command
# "cargo test --features test_tower_metadata -- test_tower_metadata" to run the tower metadata tests. All tower
# metadata tests' name must start with "test_tower_metadata", as shown in the Makefile command.
test_tower_metadata = []

# Enable this feature to generate binaries where you can track Tokio tasks using tokio console, with the steps:
#   cargo install --locked tokio-console
#   tdserver start
#   tokio conosle
tokio_console = []

[profile.dev]
codegen-units = 4096
debug = true
incremental = true
lto = "off"
opt-level = 0
panic = "unwind"
strip = "none"

[profile.integration]
inherits = "release"
codegen-units = 256
incremental = true
lto = "off"
opt-level = 0

[profile.assembly]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[package.metadata.cargo-machete]
ignored = ["openssl", "toml"]

# Internal dependencies

## Macros

[workspace.dependencies.td-apiforge]
path = "macros/facets/td-apiforge"

[workspace.dependencies.td-attach]
path = "macros/facets/td-attach"

[workspace.dependencies.td-build]
path = "devutils/automation/tasks/cargo/td-build"

[workspace.dependencies.td-type]
path = "macros/facets/td-type"

[workspace.dependencies.tm-error]
path = "macros/facets/tm-error"

[workspace.dependencies.tm-test]
path = "macros/facets/tm-test"

[workspace.dependencies.tm-tower]
path = "macros/facets/tm-tower"

[workspace.dependencies.tm-workspace]
path = "macros/facets/tm-workspace"

## Libraries

[workspace.dependencies.ta-apiserver]
path = "server/libraries/ta-apiserver"

[workspace.dependencies.ta-execution]
path = "server/libraries/ta-execution"

[workspace.dependencies.ta-tableframe]
path = "server/libraries/ta-tableframe"

[workspace.dependencies.td-apiserver]
path = "server/libraries/td-apiserver"

[workspace.dependencies.td-authz]
path = "server/libraries/td-authz"

[workspace.dependencies.td-common]
path = "server/libraries/td-common"

[workspace.dependencies.td-database]
path = "server/libraries/td-database"

[workspace.dependencies.td-error]
path = "server/libraries/td-error"

[workspace.dependencies.td-execution]
path = "server/libraries/td-execution"

[workspace.dependencies.te-tableframe]
path = "extensions/rust/te-tableframe"

[workspace.dependencies.td-objects]
path = "server/libraries/td-objects"

[workspace.dependencies.td-process]
path = "server/libraries/td-process"

[workspace.dependencies.td-python]
path = "server/libraries/td-python"

[workspace.dependencies.td-schema]
path = "server/libraries/td-schema"

[workspace.dependencies.td-security]
path = "server/libraries/td-security"

[workspace.dependencies.td-services]
path = "server/libraries/td-services"

[workspace.dependencies.td-server]
path = "server/binaries/td-server"

[workspace.dependencies.td-shuttle]
path = "server/libraries/td-shuttle"

[workspace.dependencies.td-storage]
path = "server/libraries/td-storage"

[workspace.dependencies.td-supervisor]
path = "server/libraries/td-supervisor"

[workspace.dependencies.td-tableframe]
path = "server/libraries/td-tableframe"

[workspace.dependencies.td-test]
path = "server/libraries/td-test"

[workspace.dependencies.td-tower]
path = "server/libraries/td-tower"

[workspace.dependencies.te-apiserver]
path = "extensions/rust/te-apiserver"

[workspace.dependencies.te-execution]
path = "extensions/rust/te-execution"

# External dependencies

[workspace.dependencies.anyhow]
version = "1.0.98"

[workspace.dependencies.aquamarine]
version = "0.6.0"

[workspace.dependencies.argon2]
version = "0.5.3"
features = [ "std" ]

[workspace.dependencies.async-trait]
version = "0.1.88"

[workspace.dependencies.atomic_enum]
version = "0.3.0"

[workspace.dependencies.axum]
version = "0.8.4"

[workspace.dependencies.axum-embed]
version = "0.1.0"

[workspace.dependencies.axum-extra]
version = "0.10.1"

[workspace.dependencies.axum-server]
version = "0.7.2"

[workspace.dependencies.base64]
version = "0.22.1"

[workspace.dependencies.bimap]
version = "0.6.3"
features = ["serde"]

[workspace.dependencies.bytes]
version = "1.10.1"

[workspace.dependencies.clap]
version = "4.5.42"
features = ["derive"]

[workspace.dependencies.clap_derive]
version = "4.5.41"

[workspace.dependencies.chrono]
version = "0.4.41"

[workspace.dependencies.colored]
version = "3.0.0"

[workspace.dependencies.color-eyre]
version = "0.6.5"

[workspace.dependencies.config]
version = "0.15.13"
features = ["yaml"]

[workspace.dependencies.console]
version = "0.16"
features = ["std"]

[workspace.dependencies.crossterm]
version = "0.29.0"

[workspace.dependencies.crossterm_terminal]
version = "0.3.2"

[workspace.dependencies.console-subscriber]
version = "0.4.1"

[workspace.dependencies.constcat]
version = "0.6.1"

[workspace.dependencies.const_format]
version = "0.2.34"

[workspace.dependencies.data-encoding]
version = "2.9.0"

[workspace.dependencies.derive-new]
version = "0.7.0"

[workspace.dependencies.derive_builder]
version = "0.20.2"

[workspace.dependencies.dirs]
version = "6.0.0"

[workspace.dependencies.dir-size]
version = "0.1.1"

[workspace.dependencies.duct]
version = "1.1.0"

[workspace.dependencies.dunce]
version = "1.0.5"

[workspace.dependencies.futures]
version = "0.3.31"

[workspace.dependencies.futures-util]
version = "0.3.31"

[workspace.dependencies.getset]
version = "0.1.6"

[workspace.dependencies.glob]
version = "0.3.2"

[workspace.dependencies.graphviz-rust]
version = "0.9.5"

[workspace.dependencies.hex]
version = "0.4.3"

[workspace.dependencies.homedir]
version = "0.3.6"

[workspace.dependencies.http]
version = "1.3.1"

[workspace.dependencies.humantime]
version = "2.2.0"

[workspace.dependencies.hyper]
version = "1.6.0"
features = ["full"]

[workspace.dependencies.ignore]
version = "0.4.23"

[workspace.dependencies.include_dir]
version = "0.7.4"

[workspace.dependencies.indexmap]
version = "2.10.0"

[workspace.dependencies.indicatif]
version = "0.18.0"
features = ["default", "improved_unicode"]

[workspace.dependencies.itertools]
version = "0.14.0"

[workspace.dependencies.jsonwebtoken]
version = "9.3.1"

[workspace.dependencies.lazy_static]
version = "1.5.0"

[workspace.dependencies.linemux]
version = "0.3.0"

[workspace.dependencies.libc]
version = "0.2.174"

[workspace.dependencies.nix]
version = "0.30.1"
features = ["process"]

[workspace.dependencies.num-format]
version = "0.4"

[workspace.dependencies.object_store]
version = "0.12.3"
features = ["aws", "azure", "gcp", "http"]

[workspace.dependencies.once_cell]
version = "1.21.3"

[workspace.dependencies.openssl]
version = "0.10.73"
features = ["vendored"]

[workspace.dependencies.opentelemetry_sdk]
version = "0.30.0"

[workspace.dependencies.opentelemetry-stdout]
version = "0.30.0"

[workspace.dependencies.paste]
version = "1.0.15"

[workspace.dependencies.path-slash]
version = "0.2.1"

[workspace.dependencies.petgraph]
version = "0.8.2"
features = ["serde", "serde_derive"]

[workspace.dependencies.pico-args]
version = "0.5.0"

[workspace.dependencies.polars]
version = "0.50.0"
features = ["lazy", "polars-lazy", "async", "csv", "json", "parquet", "cloud", "aws", "azure", "gcp", "sql"]

[workspace.dependencies.polars-io]
version = "0.50.0"
features = ["cloud"]

[workspace.dependencies.polars-parquet-format]
version = "0.1.0"

[workspace.dependencies.rand]
version = "0.9.2"

[workspace.dependencies.ratatui]
version = "0.29.0"

[workspace.dependencies.regex]
version = "1.11.1"

[workspace.dependencies.reqwest]
version = "0.12.22"

[workspace.dependencies.ring]
version = "0.17.14"

[workspace.dependencies.rustls]
version = "0.23.31"

[workspace.dependencies.rust-embed]
version = "8.7.2"

[workspace.dependencies.semver]
version = "1.0.26"

[workspace.dependencies.sha2]
version = "0.10.9"

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.142"

[workspace.dependencies.serde_valid]
version = "1.0.5"

[workspace.dependencies.serde_yaml]
version = "0.9.34"

[workspace.dependencies.sqlx]
version = "0.8.6"
features = ["sqlite", "runtime-tokio", "macros", "chrono"]

[workspace.dependencies.strum]
version = "0.27.2"

[workspace.dependencies.supports-color]
version = "3.0.2"

[workspace.dependencies.sysinfo]
version = "0.36.1"

[workspace.dependencies.temp-env]
version = "0.3.6"

[workspace.dependencies.tempfile]
version = "3.20.0"

[workspace.dependencies.testdir]
version = "0.9.3"

[workspace.dependencies.textwrap]
version = "0.16.2"

[workspace.dependencies.terminal_size]
version = "0.4.2"

[workspace.dependencies.thiserror]
version = "2.0.12"

[workspace.dependencies.tokio]
version = "1.47.1"
features = ["full"]

[workspace.dependencies.tokio-util]
version = "0.7.16"

[workspace.dependencies.toml]
version = "0.9.5"

[workspace.dependencies.tower]
version = "0.5.2"
features = ["make", "util"]

[workspace.dependencies.tower-layer]
version = "0.3.3"

[workspace.dependencies.tower-service]
version = "0.3.3"

[workspace.dependencies.tower-http]
version = "0.6.6"
features = ["cors", "timeout", "trace"]

[workspace.dependencies.tabled]
version = "0.20.0"

[workspace.dependencies.tracing]
version = "0.1.41"

[workspace.dependencies.tracing-futures]
version = "0.2.5"

[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[workspace.dependencies.utoipa]
version = "5.4.0"
features = ["axum_extras", "preserve_order"]

[workspace.dependencies.utoipa-axum]
version = "0.2.0"

[workspace.dependencies.utoipa-swagger-ui]
version = "9.0.2"
features = ["axum", "reqwest"]

[workspace.dependencies.url]
version = "2.5.4"
features = ["serde"]

[workspace.dependencies.uuid]
version = "1.17.0"
features = ["v7"]

[workspace.dependencies.walkdir]
version = "2.5.0"

[workspace.dependencies.whoami]
version = "1.6.0"

[workspace.dependencies.wildmatch]
version = "2.4.0"

# Update with care. There are some yanked versions after this, and 0.61.3, latesy
# when writing this (2025.06.19) breaks the code.
[workspace.dependencies.windows]
version = "0.60.0"
features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_System_Threading"]

[workspace.dependencies.windows-sys]
version = "0.60.2"
features = ["Win32", "Win32_System_Threading", "Win32_System_Console"]

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

toml = { workspace = true }

[dependencies]

# Internal dependencies

## Libraries

te-tableframe = { workspace = true }
ta-tableframe = { workspace = true }

# External dependencies

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
