#
# Copyright 2024 Tabs Data Inc.
#

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
preview = true
enable-unstable-feature = ["string_processing"]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[tool.isort]
profile = "black"
known_first_party = [
    "tabsdata",
    "tabsserver",
    "td_features",
    "td_interceptor_api",
    "td_interceptor",
    "td_sdk",
    "tests",
]

[tool.licensecheck]
using = "requirements:requirements.txt"